[tool.poetry]
name = "ssg"
version = "0.1.0"
description = "Dicom StoreSCU with GUI in Python"
authors = ["Alessio Barone <info.alessiobarone@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.0"
configparser = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
